--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,20 +1,18 @@
-.container {
+.pageWrap {
+    width: 100%;
     text-align: center;
-    font-family: cursive;
+    font-family: monospace;
+    font-size: medium;
+    font-weight: normal;
+    background-color: #F5F5F5;
+    color: #002244;
 }
 
-
-.back-ground {
-    background-color: black;
-    color: white;
-}
-
-.addImage {
-
-    display: auto;
-    height: 300px;
-    width: 350px;
-    vertical-align: middle;
-    margin-left: auto;
+img {
+    height: 330px;
+    width: 600px;
+    margin-left: 0px;
+    padding-bottom: 20px;
     margin-right: auto;
+    /* padding-right: 100px; */
 }
